# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "ironcache"
description = "IronCache: the most efficient Redis-compatible cache, in one static Rust binary. (server | cli | bench | check | config | upgrade)"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
# Emits `rerun-if-env-changed=IRONCACHE_BUILD_VERSION` so the compile-time
# version stamp (cli::BUILD_VERSION) is re-read when the rolling-release workflow
# changes it; see build.rs.
build = "build.rs"

[[bin]]
name = "ironcache"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ironcache-env = { workspace = true }
ironcache-protocol = { workspace = true }
ironcache-runtime = { workspace = true }
ironcache-config = { workspace = true }
ironcache-observe = { workspace = true }
# The binary depends on BOTH the waist (the trait/types) and the concrete store
# (to construct the per-shard ShardStore it hands to dispatch). The server library
# depends only on the waist; the binary is where the concrete impl is wired in.
ironcache-storage = { workspace = true }
ironcache-store = { workspace = true }
# Durable on-disk SNAPSHOT persistence (#58/#62/#63). The binary owns the concrete per-shard
# stores + the data_dir + the env Clock, so the cross-shard SAVE/BGSAVE fan-out (each shard dumps
# its own partition via the forkless snapshot_chunk) + the atomic manifest commit + load-on-boot
# are wired HERE. Default-off: with no data_dir configured the persist path is never entered and
# the boot + hot path are byte-unchanged. A leaf above the store (reuses the KvObj codec from
# ironcache-repl), so it adds no third-party deps.
ironcache-persist = { workspace = true }
# The concrete eviction policy: the binary constructs the configured `Policy`
# (S3-FIFO/Random/NoEviction via map_policy_name) and wires it into the per-shard
# store as the E hook. The library names only the EvictionPolicy/Admit traits.
ironcache-eviction = { workspace = true }
ironcache-server = { workspace = true }
# The static slot-ownership map (CLUSTER_CONTRACT.md #70, slice 2). The binary builds the
# `SlotMap` once at boot from the resolved topology and threads it (Arc) into every shard's
# ServerContext; the serve-layer router reads it to decide MOVED / CROSSSLOT redirection. It
# is a leaf (only ironcache-protocol), so it adds no third-party deps.
ironcache-cluster = { workspace = true }
# The Raft control plane (HA-4c). In raft-governance mode (`cluster_mode = raft`, opt-in) the
# binary builds a shared Arc<SlotMap>, a ConfigSm over it, and spawns the RaftClusterBusNode
# control-plane task on a dedicated thread; the RaftHandle goes into ServerContext so a CLUSTER
# mutator proposes through the log. `ironcache-raft` supplies the engine + ConfigCmd/RaftConfig
# types the boot wiring names; `ironcache-raft-net` the adapter + FileStorage + ConfigSm + handle.
ironcache-raft = { workspace = true }
ironcache-raft-net = { workspace = true }
# The replication data plane (HA-7). In raft-governance mode a node that becomes a committed
# REPLICA of some slots attaches its shard to the slot OWNER's primary: it installs a
# ReplObserver on its store + serves replica connections (the primary side), and dials the
# owner to full-sync + tail (the replica side). The DEFAULT static path never reaches this
# module, so the dependency adds no cost there. Mirrors the `ironcache-cluster` leaf line.
ironcache-repl = { workspace = true }
# The inter-node transport (HA-1). A raft-mode `CLUSTER MEET <host> <port>` LEARNS the MEET'd
# peer's REAL announce id by dialing the peer's RESP client port and reading `CLUSTER MYID`
# over a `PeerConn` (item-7 id-reconciliation), so the committed node table coincides with the
# peer's self-added announce entry (no synth/announce duplicate). The DEFAULT static path never
# reaches this, so it adds no cost there. A leaf on the Runtime seam (no extra third-party deps).
ironcache-clusterbus = { workspace = true }
# Embedded transport TLS for the CLIENT listener (#105, docs/design/TLS.md). The boot wiring
# builds the rustls acceptor (via ironcache-runtime's `build_acceptor`) when `tls = on` and names
# the `tokio_rustls::TlsAcceptor` handle type it threads into each connection's serve closure; the
# ClientStream + handshake live in ironcache-runtime. The `ring` provider is pinned at the
# workspace level (no aws-lc-rs/cmake, no system OpenSSL) for the reproducible static build. When
# `tls = off` (the default) the acceptor is never built and the serve path is plaintext
# byte-unchanged.
tokio-rustls = { workspace = true }
# Ed25519 signature verification for the `ironcache upgrade` minisign anchor (#386). `ring` is ALREADY
# in the graph + linked into this binary as tokio-rustls's crypto provider (the `ring` feature above),
# so declaring it directly adds NO new crate to Cargo.lock and no binary-size / musl / cargo-deny cost
# (respecting the verify.rs "no new crypto crate" posture); the minisign verify reuses the SAME audited
# Ed25519 the TLS stack uses, rather than hand-rolling curve arithmetic. Blake2b-512 + base64 (which
# `ring` does not expose) ARE hand-rolled in `upgrade::minisign`, validated against RFC-7693 /
# RFC-4648 known-answer vectors, in the same spirit as the hand-rolled FIPS-180-4 sha256.
ring = { version = "0.17", default-features = false }
clap = { workspace = true }
anyhow = { workspace = true }
# The `ironcache upgrade --cluster` static actuation-map inventory (#392 slice 4): the operator
# supplies a small TOML file (per-node resp_addr / auth / ssh_target / upgrade_source + the observe
# seeds) that parses into the driver's `Inventory` / `Vec<ActuationTarget>`. `toml` + `serde` are
# ALREADY workspace dependencies (the config stack uses them), so declaring them here adds NO new
# crate to Cargo.lock; only the derive path over the small inventory structs is exercised.
toml = { workspace = true }
serde = { workspace = true }
# Typed errors for the `ironcache upgrade` self-updater (#387): the Verifier/Source/Swap/Service/
# HealthProbe/Save seams each carry a `thiserror`-derived error enum (no stringly-typed errors,
# ERRORS.md). Already a workspace dependency used pervasively in the library crates, so this adds NO
# new crate to the graph (it is already in Cargo.lock); the binary crate just declares it.
thiserror = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "io-util", "time", "macros", "sync", "signal"] }
libc = { workspace = true }
# Structured logging (OBSERVABILITY.md, #152). The binary installs ONE tracing-subscriber fmt
# layer at boot, filtered by `--log-level`, and the operational logs (boot banner, errors, the
# cluster-tls/dns/persistence/shutdown messages) emit through the `tracing` facade. Pure Rust, so
# the static musl/aarch64 build is unaffected.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# The OPTIONAL Linux io_uring datapath (PROD-10 / #28, docs/design/IOURING_DATAPATH.md): a
# default-OFF, ADDITIVE feature that forwards to `ironcache-runtime/io_uring` (which gates the
# backend `#[cfg(all(target_os = "linux", feature = "io_uring"))]`). With this feature OFF (the
# default) the binary never pulls tokio-uring/io-uring and the boot always uses the tokio backend;
# turning it ON adds the io_uring `Runtime` + the per-shard io_uring bootstrap, selected at boot
# only when `runtime = io_uring` AND on Linux AND with TLS off (else it falls back to tokio).
[features]
default = []
io_uring = ["ironcache-runtime/io_uring"]
# #285 stage-4 fallback: build the store's per-slot index on hashbrown instead of
# the default Dash table (see ironcache-store's feature of the same name).
hashbrown-index = ["ironcache-store/hashbrown-index"]

# TRANSPARENT HUGE PAGES for the store tables + value blobs (#512, ADR-0006). A
# default-OFF, Linux-only knob: when enabled it appends `thp:always,metadata_thp:auto`
# to the compile-time jemalloc `malloc_conf` (see main.rs), so jemalloc backs its
# extents and metadata with 2 MiB huge pages via madvise(MADV_HUGEPAGE), cutting TLB
# misses on the `-r 1M` random-key hot path. The string only carries the `thp:` token
# on `target_os = "linux"` (jemalloc compiles THP support there and nowhere else), so
# turning this on for a macOS/other build is a no-op with no jemalloc warning. It is
# DEFAULT-OFF because `thp:always` can raise RSS and add khugepaged latency on some
# kernels (docs/design/CONFIG.md "Transparent huge pages"); the runtime override
# `_RJEM_MALLOC_CONF=thp:always` flips it on ANY shipped binary with no rebuild.
hugepages = []

# jemalloc is the default allocator (ADR-0006, jemalloc 5.3.x). Not available on
# MSVC Windows; gate it so the workspace still builds there (the static release
# targets are musl/macos, where it is available). The background-purge thread,
# stats, and profiling features are enabled per ADR-0006; tikv-jemalloc-ctl gives
# the PR-3 epoch + stats.allocated accounting path a place to compile against.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }
tikv-jemalloc-ctl = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "net", "io-util", "time", "macros", "sync"] }
# NOTE: `ironcache-clusterbus` is now a NORMAL dependency (above): the raft-mode MEET path uses
# its `peer_node_id` to learn a MEET'd peer's real announce id. The `ha_transport` integration
# test that drives a node-to-node connection over the Runtime seam still sees it through that.
# The TLS acceptance test (tests/tls.rs, #105) drives a tokio-rustls CLIENT that trusts the
# checked-in self-signed test cert; it parses that cert via rustls-pki-types' `PemObject`,
# re-exported through tokio-rustls (already a normal dependency above), so it needs no extra
# dev-dependency.
